Fix+UI: trackNames z-index++ (the cursorTime has to go under #tracknames)

--- a/css/grid.scss
+++ b/css/grid.scss
@@ -86,7 +86,7 @@
 
 	.trackNames {
 		box-sizing: border-box;
-		z-index: 1;
+		z-index: 2;
 		min-width: 16px;
 		max-width: 300px;
 		border: solid #000;
